Revert "fix koha link in footer, weird spacing"
This reverts commit bbbdcdd9049a02e998138c0d68d78f99d48351e6.

--- a/libraries/libraries/static/scss/components/footer/_footer-section.scss
+++ b/libraries/libraries/static/scss/components/footer/_footer-section.scss
@@ -144,6 +144,12 @@
         }
     }
 
+    &.koha.button {
+        display: table;
+        margin-bottom: 10px;
+        margin-left: 7px;
+    }
+
     &:hover {
         opacity: .7;
     }
